--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="show_details">Show Details</string>
-    <string name="full_name">Full Name :</string>
     <string name="logout">Logout</string>
+    <string name="first_name">First Name : </string>
+    <string name="gender">Gender : </string>
+    <string name="last_name">"Last Name : "</string>
+    <string name="email_">Email : </string>
+    <string name="mobile_number_">Mobile Number : </string>
+    <string name="date_of_birth_">"Date of Birth : "</string>
 </resources>
